--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@volar/monaco": "~1.11.1",
     "@volar/typescript": "~1.11.1",
     "@vue/language-service": "1.9.0-alpha.3",
+    "autoprefixer": "^10.4.19",
     "bumpp": "^9.4.0",
     "codemirror": "^5.65.16",
     "conventional-changelog-cli": "^4.1.0",
@@ -92,10 +93,12 @@
     "hash-sum": "^2.0.0",
     "lint-staged": "^15.2.2",
     "monaco-editor-core": "^0.46.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "shiki": "^1.1.7",
     "simple-git-hooks": "^2.10.0",
     "sucrase": "^3.35.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.2",
     "vite": "^5.1.5",
     "vite-plugin-dts": "^3.7.3",
